[gd_scene load_steps=11 format=4 uid="uid://dlt4lkht1o4tl"]

[ext_resource type="Texture2D" uid="uid://f7neg50singl" path="res://assets/art/tilesets/plains.png" id="1_g5dvy"]
[ext_resource type="Script" uid="uid://db3dhln56bmks" path="res://scenes/stages/stage_1/central_forest.gd" id="1_gmw2a"]
[ext_resource type="Texture2D" uid="uid://cpue5880cp76d" path="res://assets/art/tilesets/grass.png" id="2_x2e8d"]
[ext_resource type="Texture2D" uid="uid://2d1sx8feoi5k" path="res://assets/art/objects/objects.png" id="3_x2e8d"]
[ext_resource type="PackedScene" uid="uid://8e13m6ekji1h" path="res://scenes/player.tscn" id="4_4tupg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4tupg"]
texture = ExtResource("1_g5dvy")
0:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.6, 8, -4.8, 8, -1.6, -1.6, 8, -4.8, 8, 1.6, 1.6, 1.6)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.6, -8, -4.8, 8, -4.8, 8, 1.6)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.6, 4.8, -8, 1.6, -8, -4.8, 1.6, -4.8, 4.8, 8)
4:4/0 = 0
5:4/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.8, 8, -4.8, -8, 1.6, -8, 1.6, 8)
2:5/0 = 0
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.6, 8, 1.6, -8, 8, -8, 8, 8)
4:5/0 = 0
5:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.8, 1.6, -4.8, -8, 8, -8, 8, 4.8, 1.6, 4.8, -1.6, 4.8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4, -8, -4, 8, -4, 8, 4)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.8, -8, -8, 8, -8, 8, 1.6, 1.6, 4.8, -1.6, 4.8)
4:6/0 = 0
5:6/0 = 0
1:0/0 = 0
1:1/0 = 0
1:2/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gmw2a"]
texture = ExtResource("2_x2e8d")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_auvos"]
texture = ExtResource("3_x2e8d")
0:0/0 = 0
5:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
11:2/0 = 0
11:3/0 = 0
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = -8
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = -2
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, -4.8, 8, 8, 8, 11.2, 14.4, 14.4, 20.8, 8, 27.2, -4.8, 27.2, -12, 24)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = -1
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 8, -12, 12, -12, 16, 8, 16, 12, 12, 16, 8, 12, 0, -8, 0, -12, 4)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 20, 0, 20, 4, 20, 8, 16, 8, 8, -4, 8, -8, 12)

[sub_resource type="TileSet" id="TileSet_auvos"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_4tupg")
sources/2 = SubResource("TileSetAtlasSource_gmw2a")
sources/3 = SubResource("TileSetAtlasSource_auvos")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmw2a"]
size = Vector2(76, 79)

[node name="CentralForest" type="Node2D"]
script = ExtResource("1_gmw2a")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAMAAQACAAAAAAAAAAQAAQACAAEAAAAAAAUAAQACAAEAAAAAAAYAAQACAAIAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAABAAIAAgAAAAAAAAACAAIAAgAAAAAAAAADAAIAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAAAAgAAAAAAAAADAAAAAgAAAAAAAAACAAAAAgAAAAAAAAABAAAAAgAAAAAAAAABAAEAAgAAAAAAAAACAAEAAgAAAAAAAAADAAEAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAABAAgAAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAADAAkAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAcAAgAAAAAAAAADAAcAAgAAAAAAAAACAAcAAgAAAAAAAAABAAcAAgAAAAAAAAAAAAkAAgAAAAAAAAABAAkAAgAAAAAAAAADAAgAAgAAAAAAAAABAAMAAQACAAAAAAACAAMAAQACAAAAAAADAAMAAQACAAAAAAAEAAMAAQACAAAAAAABAAYAAQACAAIAAAACAAYAAQACAAIAAAADAAYAAQACAAIAAAAEAAYAAQACAAIAAAABAAQAAQACAAEAAAABAAUAAQACAAEAAAACAAQAAQACAAEAAAACAAUAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAAEAAQAAQACAAEAAAAEAAUAAQACAAEAAAAHAAMAAQADAAAAAAAFAAMAAQACAAAAAAAGAAMAAQACAAAAAAAFAAQAAQACAAEAAAAFAAUAAQACAAEAAAAFAAYAAQAFAAAAAAAGAAQAAQACAAEAAAAGAAUAAQACAAEAAAAGAAYAAQACAAEAAAAHAAQAAQADAAEAAAAHAAUAAQADAAEAAAAHAAYAAQADAAEAAAAFAAcAAQABAAEAAAAFAAgAAQABAAEAAAAFAAkAAQABAAEAAAAHAAcAAQADAAEAAAAHAAgAAQADAAEAAAAHAAkAAQADAAEAAAAGAAcAAQACAAEAAAAGAAgAAQACAAEAAAAGAAkAAQACAAEAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAHAAAAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAAMAAAAAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAIAAgAAAAAAAAANAAAAAgAAAAAAAAANAAEAAgAAAAAAAAANAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAkAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAANAAMAAgAAAAAAAAANAAQAAgAAAAAAAAANAAUAAgAAAAAAAAANAAYAAgAAAAAAAAANAAcAAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAAFAAoAAQABAAEAAAAFAAsAAQABAAEAAAAFAAwAAQABAAEAAAAHAAoAAQAEAAEAAAAIAAoAAQACAAAAAAAJAAoAAQACAAAAAAAKAAoAAQACAAAAAAALAAoAAQACAAAAAAAMAAoAAQACAAAAAAANAAoAAQACAAAAAAAIAA0AAQACAAIAAAAJAA0AAQACAAIAAAAKAA0AAQACAAIAAAALAA0AAQACAAIAAAAMAA0AAQACAAIAAAANAA0AAQACAAIAAAAGAAoAAQACAAEAAAAGAAsAAQACAAEAAAAGAAwAAQACAAEAAAAGAA0AAQACAAEAAAAHAA0AAQAEAAAAAAAHAA4AAQADAAEAAAAHAA8AAQADAAEAAAAHABAAAQADAAEAAAAFAA0AAQABAAEAAAAFAA4AAQABAAEAAAAFAA8AAQABAAEAAAAFABAAAQABAAEAAAAHAAsAAQACAAEAAAAHAAwAAQACAAEAAAAIAAsAAQACAAEAAAAIAAwAAQACAAEAAAAJAAsAAQACAAEAAAAJAAwAAQACAAEAAAAKAAsAAQACAAEAAAAKAAwAAQACAAEAAAALAAsAAQACAAEAAAALAAwAAQACAAEAAAAMAAsAAQACAAEAAAAMAAwAAQACAAEAAAANAAsAAQACAAEAAAANAAwAAQACAAEAAAAGAA4AAQACAAEAAAAGAA8AAQACAAEAAAAGABAAAQACAAEAAAAGABEAAQACAAEAAAAFABEAAQABAAEAAAAHABEAAQADAAEAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAAAAA4AAgAAAAAAAAAAAA8AAgAAAAAAAAAAABAAAgAAAAAAAAAAABEAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAABAA0AAgAAAAAAAAABAA4AAgAAAAAAAAABAA8AAgAAAAAAAAABABAAAgAAAAAAAAABABEAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAACAAwAAgAAAAAAAAACAA0AAgAAAAAAAAACAA4AAgAAAAAAAAACAA8AAgAAAAAAAAACABAAAgAAAAAAAAACABEAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAADAA0AAgAAAAAAAAADAA4AAgAAAAAAAAADAA8AAgAAAAAAAAADABAAAgAAAAAAAAADABEAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA0AAgAAAAAAAAAEAA4AAgAAAAAAAAAEAA8AAgAAAAAAAAAEABAAAgAAAAAAAAAEABEAAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA8AAgAAAAAAAAAIABAAAgAAAAAAAAAIABEAAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAAAAAAJABEAAgAAAAAAAAAKAA4AAgAAAAAAAAAKAA8AAgAAAAAAAAAKABAAAgAAAAAAAAAKABEAAgAAAAAAAAALAA4AAgAAAAAAAAALAA8AAgAAAAAAAAALABAAAgAAAAAAAAALABEAAgAAAAAAAAAMAA4AAgAAAAAAAAAMAA8AAgAAAAAAAAAMABAAAgAAAAAAAAAMABEAAgAAAAAAAAANAA4AAgAAAAAAAAANAA8AAgAAAAAAAAANABAAAgAAAAAAAAANABEAAgAAAAAAAAAOAA4AAgAAAAAAAAAOAA8AAgAAAAAAAAAOABAAAgAAAAAAAAAOABEAAgAAAAAAAAAPAA4AAgAAAAAAAAAPAA8AAgAAAAAAAAAPABAAAgAAAAAAAAAPABEAAgAAAAAAAAAQAA4AAgAAAAAAAAAQAA8AAgAAAAAAAAAQABAAAgAAAAAAAAAQABEAAgAAAAAAAAARAA4AAgAAAAAAAAARAA8AAgAAAAAAAAARABAAAgAAAAAAAAARABEAAgAAAAAAAAASAA4AAgAAAAAAAAASAA8AAgAAAAAAAAASABAAAgAAAAAAAAASABEAAgAAAAAAAAATAA4AAgAAAAAAAAATAA8AAgAAAAAAAAATABAAAgAAAAAAAAATABEAAgAAAAAAAAAUAA4AAgAAAAAAAAAUAA8AAgAAAAAAAAAUABAAAgAAAAAAAAAUABEAAgAAAAAAAAAVAA4AAgAAAAAAAAAVAA8AAgAAAAAAAAAVABAAAgAAAAAAAAAVABEAAgAAAAAAAAAWAA4AAgAAAAAAAAAWAA8AAgAAAAAAAAAWABAAAgAAAAAAAAAWABEAAgAAAAAAAAAOAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAQAAAAAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAcAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAARAAAAAgAAAAAAAAARAAEAAgAAAAAAAAARAAIAAgAAAAAAAAARAAMAAgAAAAAAAAARAAQAAgAAAAAAAAARAAUAAgAAAAAAAAARAAYAAgAAAAAAAAARAAcAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAASAAAAAgAAAAAAAAASAAEAAgAAAAAAAAASAAIAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAcAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAATAAAAAgAAAAAAAAATAAEAAgAAAAAAAAATAAIAAgAAAAAAAAATAAMAAgAAAAAAAAATAAQAAgAAAAAAAAATAAUAAgAAAAAAAAATAAYAAgAAAAAAAAATAAcAAgAAAAAAAAATAAgAAgAAAAAAAAATAAkAAgAAAAAAAAAUAAAAAgAAAAAAAAAUAAEAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAcAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAkAAgAAAAAAAAAVAAAAAgAAAAAAAAAVAAEAAgAAAAAAAAAVAAIAAgAAAAAAAAAVAAMAAgAAAAAAAAAVAAQAAgAAAAAAAAAVAAUAAgAAAAAAAAAVAAYAAgAAAAAAAAAVAAcAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAkAAgAAAAAAAAAWAAAAAgAAAAAAAAAWAAEAAgAAAAAAAAAWAAIAAgAAAAAAAAAWAAMAAgAAAAAAAAAWAAQAAgAAAAAAAAAWAAUAAgAAAAAAAAAWAAYAAgAAAAAAAAAWAAcAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAkAAgAAAAAAAAAXAAAAAgAAAAAAAAAXAAEAAgAAAAAAAAAXAAIAAgAAAAAAAAAXAAMAAgAAAAAAAAAXAAQAAgAAAAAAAAAXAAUAAgAAAAAAAAAXAAYAAgAAAAAAAAAXAAcAAgAAAAAAAAAXAAgAAgAAAAAAAAAXAAkAAgAAAAAAAAAYAAAAAgAAAAAAAAAYAAEAAgAAAAAAAAAYAAIAAgAAAAAAAAAYAAMAAgAAAAAAAAAYAAQAAgAAAAAAAAAYAAUAAgAAAAAAAAAYAAYAAgAAAAAAAAAYAAcAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAkAAgAAAAAAAAAOAAsAAQACAAEAAAAOAAwAAQACAAEAAAAPAAsAAQACAAEAAAAPAAwAAQACAAEAAAAQAAsAAQACAAEAAAAQAAwAAQACAAEAAAARAAsAAQACAAEAAAARAAwAAQACAAEAAAASAAsAAQACAAEAAAASAAwAAQACAAEAAAATAAsAAQACAAEAAAATAAwAAQACAAEAAAAUAAsAAQACAAEAAAAUAAwAAQACAAEAAAAVAAsAAQACAAEAAAAVAAwAAQACAAEAAAAWAAsAAQACAAEAAAAWAAwAAQACAAEAAAAXAAsAAQACAAEAAAAXAAwAAQACAAEAAAAYAAsAAQACAAEAAAAYAAwAAQACAAEAAAAOAAoAAQACAAAAAAAPAAoAAQACAAAAAAAQAAoAAQACAAAAAAARAAoAAQACAAAAAAASAAoAAQACAAAAAAATAAoAAQACAAAAAAAUAAoAAQACAAAAAAAVAAoAAQACAAAAAAAWAAoAAQACAAAAAAAXAAoAAQACAAAAAAAYAAoAAQACAAAAAAAOAA0AAQACAAIAAAAPAA0AAQACAAIAAAAQAA0AAQACAAIAAAARAA0AAQACAAIAAAASAA0AAQACAAIAAAATAA0AAQACAAIAAAAUAA0AAQACAAIAAAAVAA0AAQACAAIAAAAWAA0AAQACAAIAAAAXAA0AAQACAAIAAAAYAA0AAQACAAIAAAAXAA4AAgAAAAAAAAAXAA8AAgAAAAAAAAAXABAAAgAAAAAAAAAXABEAAgAAAAAAAAAYAA4AAgAAAAAAAAAYAA8AAgAAAAAAAAAYABAAAgAAAAAAAAAYABEAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_auvos")

[node name="Cliff" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAgAAQACAAQAAAABAAgAAQACAAQAAAAAAAkAAQACAAUAAAAAAAoAAQACAAUAAAAAAAsAAQACAAUAAAAAAAwAAQACAAUAAAAAAA0AAQACAAUAAAAAAA4AAQACAAUAAAAAAA8AAQACAAUAAAAAABAAAQACAAUAAAAAABEAAQACAAUAAAABAAkAAQACAAUAAAABAAoAAQACAAUAAAABAAsAAQACAAUAAAABAAwAAQACAAUAAAABAA0AAQACAAUAAAABAA4AAQACAAUAAAABAA8AAQACAAUAAAABABAAAQACAAUAAAABABEAAQACAAUAAAACAAgAAQADAAQAAAACAAkAAQADAAUAAAACAAoAAQADAAUAAAACAAsAAQADAAUAAAACAAwAAQADAAUAAAACAA0AAQADAAUAAAACAA4AAQADAAUAAAACAA8AAQADAAUAAAACABAAAQADAAUAAAACABEAAQADAAUAAAALAAAAAQABAAUAAAALAAEAAQABAAUAAAALAAIAAQABAAUAAAALAAMAAQABAAUAAAALAAQAAQABAAUAAAALAAUAAQABAAUAAAALAAYAAQABAAYAAAAMAAYAAQACAAYAAAANAAYAAQACAAYAAAAMAAAAAQACAAUAAAAMAAEAAQACAAUAAAAMAAIAAQACAAUAAAAMAAMAAQACAAUAAAAMAAQAAQACAAUAAAAMAAUAAQACAAUAAAANAAAAAQACAAUAAAANAAEAAQACAAUAAAANAAIAAQACAAUAAAANAAMAAQACAAUAAAANAAQAAQACAAUAAAANAAUAAQACAAUAAAAOAAAAAQACAAUAAAAOAAEAAQACAAUAAAAOAAIAAQACAAUAAAAOAAMAAQACAAUAAAAOAAQAAQACAAUAAAAOAAUAAQACAAUAAAAPAAAAAQACAAUAAAAPAAEAAQACAAUAAAAPAAIAAQACAAUAAAAPAAMAAQACAAUAAAAPAAQAAQACAAUAAAAPAAUAAQACAAUAAAAQAAAAAQACAAUAAAAQAAEAAQACAAUAAAAQAAIAAQACAAUAAAAQAAMAAQACAAUAAAAQAAQAAQACAAUAAAAQAAUAAQACAAUAAAARAAAAAQACAAUAAAARAAEAAQACAAUAAAARAAIAAQACAAUAAAARAAMAAQACAAUAAAARAAQAAQACAAUAAAARAAUAAQACAAUAAAASAAAAAQACAAUAAAASAAEAAQACAAUAAAASAAIAAQACAAUAAAASAAMAAQACAAUAAAASAAQAAQACAAUAAAASAAUAAQACAAUAAAATAAAAAQACAAUAAAATAAEAAQACAAUAAAATAAIAAQACAAUAAAATAAMAAQACAAUAAAATAAQAAQACAAUAAAATAAUAAQACAAUAAAAUAAAAAQACAAUAAAAUAAEAAQACAAUAAAAUAAIAAQACAAUAAAAUAAMAAQACAAUAAAAUAAQAAQACAAUAAAAUAAUAAQACAAUAAAAVAAAAAQACAAUAAAAVAAEAAQACAAUAAAAVAAIAAQACAAUAAAAVAAMAAQACAAUAAAAVAAQAAQACAAUAAAAVAAUAAQACAAUAAAAOAAYAAQACAAYAAAAPAAYAAQACAAYAAAAQAAYAAQACAAYAAAARAAYAAQACAAYAAAASAAYAAQACAAYAAAATAAYAAQACAAYAAAAUAAYAAQACAAYAAAAVAAYAAQACAAYAAAAWAAYAAQADAAYAAAAWAAAAAQADAAUAAAAWAAEAAQADAAUAAAAWAAIAAQADAAUAAAAWAAMAAQADAAUAAAAWAAQAAQADAAUAAAAWAAUAAQADAAUAAAAOAA8AAQABAAQAAAAPAA8AAQACAAQAAAAOABAAAQABAAUAAAAOABEAAQABAAUAAAAPABAAAQACAAUAAAAPABEAAQACAAUAAAAQABAAAQACAAUAAAAQABEAAQACAAUAAAARABAAAQACAAUAAAARABEAAQACAAUAAAASABAAAQACAAUAAAASABEAAQACAAUAAAATABAAAQACAAUAAAATABEAAQACAAUAAAAUABAAAQACAAUAAAAUABEAAQACAAUAAAAQAA8AAQACAAQAAAARAA8AAQACAAQAAAASAA8AAQACAAQAAAATAA8AAQACAAQAAAAUAA8AAQACAAQAAAAVAA8AAQADAAQAAAAVABAAAQADAAUAAAAVABEAAQADAAUAAAA=")
tile_set = SubResource("TileSet_auvos")

[node name="Stone & Props" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAAQAAwAAAAEAAAAIAAgAAwAAAAEAAAAMAAkAAwAAAAEAAAAIABAAAwAAAAEAAAAEAA4AAwAAAAEAAAABABAAAwAAAAEAAAABAAwAAwAAAAEAAAAMAAIAAwAAAAEAAAAGAAEAAwAAAAEAAAAJAAIAAwAAAAEAAAAOAA4AAwAAAAEAAAAUAAkAAwAAAAEAAAAXAAcAAwAAAAEAAAAXABAAAwAAAAEAAAAQAAsAAwAAAAEAAAAVAA0AAwAAAAEAAAA=")
tile_set = SubResource("TileSet_auvos")

[node name="YSort" type="TileMapLayer" parent="."]
top_level = true
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAKAAgAAwAIAAYAAAAHAAEAAwAIAAYAAAACAAAAAwAIAAYAAAAEAAEAAwAAAAUAAAAEAAcAAwAIAAYAAAAJAAUAAwAGAAcAAAAJAAcAAwAKAAcAAAAMABAAAwAKAAcAAAAJAA4AAwAAAAUAAAALAA4AAwAGAAcAAAAEAAsAAwAAAAUAAAAEABAAAwAKAAcAAAABAA0AAwAAAAUAAAABAAkAAwAGAAcAAAAMAAMAAwAIAAYAAAAMAAAAAwAAAAUAAAADAA4AAwAIAAYAAAAPAA8AAwAIAAYAAAASAA8AAwAAAAUAAAAPAAMAAwAAAAUAAAASAAQAAwAKAAcAAAAPAAEAAwAGAAcAAAASAAIAAwAGAAcAAAAUAAAAAwAAAAUAAAAVAAMAAwAAAAUAAAAPAAcAAwAAAAUAAAASAAgAAwAGAAcAAAAVAAYAAwAIAAYAAAAWAAgAAwAKAAcAAAAXAA4AAwAGAAcAAAA=")
tile_set = SubResource("TileSet_auvos")
y_sort_origin = 1

[node name="player" parent="." instance=ExtResource("4_4tupg")]
position = Vector2(375, 190)

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(0, -1)
zoom = Vector2(4, 4)
limit_left = 10
limit_top = 10
limit_right = 395
limit_bottom = 276

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 0, 400, 0, 400, 164, 445, 164, 445, 221, 400, 221, 400, 288, 124, 288, 124, 311, 81, 311, 81, 288, 0, 288, 0, 107, -21, 107, -21, 54, 0, 54, 0, 1, -13, 1, -49, 1, -49, 335, 483, 336, 481, -50, -59, -41, -37, 0)

[node name="west_forest" type="Area2D" parent="."]

[node name="area" type="CollisionShape2D" parent="west_forest"]
position = Vector2(426, 192.5)
shape = SubResource("RectangleShape2D_gmw2a")

[connection signal="body_entered" from="west_forest" to="." method="_on_west_forest_body_entered"]
[connection signal="body_exited" from="west_forest" to="." method="_on_west_forest_body_exited"]
